2020-5-4	(munseong)
Learned GitHub useage		
Create project	

2020-5-5	(munseong)
create github	
Push project	

2020-5-6	(munseong)
Add  API 
made RecycleView
made Card View and adapter

2020-5-8	(munseong)
Picasso Library
Changed Recycle View

2020-5-12	(munseong)
Create menu bar

2020-5-14	(munseong)
Create movie list
 
2020-5-24	(munseong)
Login Page Create 

2020-5-24(kefu)
sign up Page Create 
Click event

2020-5-25(kefu)
setup database
connect database mysql

2020-5-25(kefu)
function for sign up 
id check
id validate
sign up success

2020-5-27	(munseong)
fix database connection error
now working!!!

2020-5-27(kefu)
Create login function 

2020-5-28(kefu)
Login success full
can connect database 

2020-5-28(kefu)
My Page Button action work
change fragment 



2020-5-28	(munseong)
Create Notice List 
sync with database 

