@@ -42,21 +42,21 @@
 
         <Spinner
             android:id="@+id/yearSpinner"
-            android:layout_width="120dp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"></Spinner>
 
         <Spinner
             android:id="@+id/termSpinner"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"></Spinner>
 
         <Spinner
             android:id="@+id/areaSpinner"
-            android:layout_width="150dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"></Spinner>
